--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/margin_s"
+        android:layout_margin="5dp"
         app:cardCornerRadius="@dimen/margin_s"
         app:cardElevation="@dimen/margin_s"
         app:layout_constraintBottom_toBottomOf="parent"
