--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/alarm1"
-                android:textSize="@dimen/title_size_medium"
+                android:textSize="@dimen/title_size_m"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/description_alarm"
-                android:textSize="@dimen/text_body_size_medium"
+                android:textSize="@dimen/text_body_size_m"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/title_time" />
 
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_xs"
                 android:text="@string/description2_alarm"
-                android:textSize="@dimen/text_body_size_medium"
+                android:textSize="@dimen/text_body_size_m"
                 app:layout_constraintStart_toEndOf="@+id/description_time"
                 app:layout_constraintTop_toBottomOf="@+id/title_time" />
 
@@ -57,7 +57,7 @@
                 android:id="@+id/switch_item"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:checked="true"
+                android:checked="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
