--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -21,7 +21,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/inner_constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_xm">
 
             <TextView
@@ -29,15 +29,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/alarm1"
+                android:textColor="#DFDACC"
                 android:textSize="@dimen/title_size_m"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/description_time"
+                android:id="@+id/description1_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/description_alarm"
+                android:textColor="#DFDACC"
                 android:textSize="@dimen/text_body_size_m"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/title_time" />
@@ -48,8 +50,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_xs"
                 android:text="@string/description2_alarm"
+                android:textColor="#DFDACC"
                 android:textSize="@dimen/text_body_size_m"
-                app:layout_constraintStart_toEndOf="@+id/description_time"
+                app:layout_constraintStart_toEndOf="@+id/description1_time"
                 app:layout_constraintTop_toBottomOf="@+id/title_time" />
 
 
@@ -58,6 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:checked="false"
+                android:enabled="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
