--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
             android:layout_height="wrap_content"
             app:collapsedTitleTextAppearance="@string/edit"
             app:menu="@menu/top_app_bar"
-            app:title="@string/alarm" />
+            app:title="@string/alarm"
+            app:titleTextAppearance="@style/TitleAppBar" />
 
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -39,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_s"
         android:text="@string/subtitle"
+        android:textColor="#000000"
         android:textSize="@dimen/text_body_size_m"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />
