--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,2 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <!-- Text color global in app -->
+    <style name="FontDefaultSystem" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/adamina</item>
+    </style>
+
+    <!-- Title TopAppBar -->
+    <style name="TitleAppBar" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/adlam_display</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">45sp</item>
+    </style>
+</resources>
