--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,9 +6,14 @@
     </style>
 
     <!-- Title TopAppBar -->
-    <style name="TitleAppBar" parent="Widget.AppCompat.TextView">
-        <item name="fontFamily">@font/adlam_display</item>
-        <item name="android:textColor">#000000</item>
+    <style name="ExpandTitleAppBar" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">45sp</item>
+        <item name="fontFamily">@font/adlam_display</item>
+    </style>
+
+    <style name="CollapsedTitleAppBar">
+        <item name="android:textSize">14sp</item>
+        <item name="fontFamily">@font/adlam_display</item>
+        <item name="android:textColor">#FB0000</item>
     </style>
 </resources>
